implement tags, optimize user profile interaction with FAQ responses